Made info text darker #62 and fixed bug where Computer Commander was too long for screen

--- a/media/CSS/style.css
+++ b/media/CSS/style.css
@@ -308,7 +308,7 @@ GtkSwitch.slider {
 }
 .info_paragraph {
     font: Bariol Bold 14;
-    color: @inactive_writing;
+    color: @subheading_color;
 }
 
 /********************************************************
